--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="container">
     <h2>💳 Informasi Isi Ulang</h2>
     <p><strong>Bank:</strong> BRI</p>
-    <p><strong>Nama:</strong> RIZAL SAPUTRA</p>
+    <p><strong>Nama:</strong> BAYU ALIAS "MA DI"</p>
     <p><strong>Nomor Rekening:</strong></p>
     <input type="text" value="001901002847568" id="rekening" readonly>
     <button onclick="copyRekening()">Salin Nomor Rekening</button>
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
