--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <p>Konten halaman yang panjang...</p>
     <p>Scroll terus...</p>
   </div>
+</body>
+  <body>
     <h2>Informasi Rekening</h2>
     <img src="https://images.seeklogo.com/logo-png/38/2/bank-bri-logo-png_seeklogo-382871.png" alt="Bank BRI" style="display: block; margin: 5px auto; width: auto; height: auto;">
     <div class="field">
@@ -134,6 +136,7 @@
   </script>
 </body>
 </html>
+
 
 
 
