--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
   <div class="rekening-info">
     <strong>Nama Rekening:</strong>
-    <div><strong>WIRI JIBRIL</strong></div>
+    <div><strong>FERDIANSYAH </strong></div>
     <strong>Nomor Rekening:</strong>
-    <div class="rekening-number" id="rekening">349401000020565</div>
+    <div class="rekening-number" id="rekening">116601000723562</div>
     <button class="btn" onclick="copyRekening()">Salin Nomor Rekening</button>
     <div id="copy-success">✔️ Berhasil menyalin nomor rekening</div>
   </div>
@@ -159,4 +159,5 @@
 
 </body>
 </html>
+
 
