--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 
   <label for="nominal"><strong>Nominal Transfer (IDR)</strong></label>
   <textarea id="nominal" rows="1" placeholder="Ketik nominal transfer..."></textarea>
+  <button class="btn" onclick="nominal()">Salin jumlah transfer</button>
+    <div id="copy-success">✔️ Berhasil menyalin jumlah transfer</div>
 
   <p><strong>Silakan kirim jumlah transfer yang benar, agar tidak mempengaruhi waktu tinjauan keuangan pesanan</strong></p>
 
@@ -159,5 +161,6 @@
 
 </body>
 </html>
+
 
 
