--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <label for="nominal"><strong>Nominal Transfer (IDR)</strong></label>
   <textarea id="nominal" rows="1" placeholder="Ketik nominal transfer..."></textarea>
-  <button class="btn" onclick="nominal()">Salin jumlah transfer</button>
+  <button class="btn" onclick="copynominal()">Salin jumlah transfer</button>
     <div id="copy-success">✔️ Berhasil menyalin jumlah transfer</div>
 
   <p><strong>Silakan kirim jumlah transfer yang benar, agar tidak mempengaruhi waktu tinjauan keuangan pesanan</strong></p>
@@ -161,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
