--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div id="copy-success">✔️ Berhasil menyalin nomor rekening</div>
   </div>
 
-  <label for="nominal"><strong>Nominal Transfer (IDR)</strong></label>
-  <textarea id="nominal" rows="1" placeholder="Ketik nominal transfer..."></textarea>
-  <button class="btn" onclick="copynominal()">Salin jumlah transfer</button>
-    <div id="copy-success">✔️ Berhasil menyalin jumlah transfer</div>
+  <div class="info-label">JUMLAH TRANSFER</div>
+<div id="amount" class="info-value">-</div>
 
+<button class="btn" onclick="copyAmount()">Salin Jumlah Transfer</button>
+<div class="notif" id="notif-amount">✅ Berhasil menyalin jumlah transfer</div>
   <p><strong>Silakan kirim jumlah transfer yang benar, agar tidak mempengaruhi waktu tinjauan keuangan pesanan</strong></p>
 
   <a href="https://platform00.com/index/my/index" class="btn">Saya sudah membayarkannya</a>
@@ -134,6 +134,23 @@
 </div>
 
 <script>
+   const endpoint = 'https://script.google.com/macros/s/AKfycbzZuKD0eQZ_rpsUkKoJiGYZuFDwgQpYVVt0JvCWxC2AnNiDBkejzqqNvIQ22AfdDT-y/exec';
+
+  fetch(endpoint)
+    .then(res => res.json())
+    .then(data => {
+      document.getElementById('bank').innerText = data.bank || '-';
+      document.getElementById('name').innerText = data.name || '-';
+      document.getElementById('account').innerText = data.account || '-';
+
+      // Tambahkan di sini:
+      const nominal = 1500000 + Math.floor(Math.random() * 100); // atau pakai angka tetap
+      document.getElementById('amount').innerText = nominal.toLocaleString('id-ID');
+    })
+    .catch(err => {
+      console.error(err);
+    });
+  
   function copyRekening() {
     const rekening = document.getElementById("rekening").innerText;
     navigator.clipboard.writeText(rekening).then(() => {
@@ -145,6 +162,16 @@
     });
   }
 
+  function copyAmount() {
+  const text = document.getElementById('amount').innerText;
+  navigator.clipboard.writeText(text).then(() => {
+    document.getElementById('notif-amount').style.display = 'block';
+    setTimeout(() => {
+      document.getElementById('notif-amount').style.display = 'none';
+    }, 3000);
+  });
+}
+  
   // Ambil parameter dari URL
     const urlParams = new URLSearchParams(window.location.search);
     const bank = urlParams.get("bank");
@@ -161,6 +188,7 @@
 
 </body>
 </html>
+
 
 
 
