--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
   <div class="rekening-info">
     <strong>Nama Rekening:</strong>
-    <div id="name">Nama Default</div>
+    <div id="name">FERDIANSYAH</div>
 
     <strong>Nomor Rekening:</strong>
-    <div class="rekening-number" id="number">0000000000</div>
+    <div class="rekening-number" id="number">116601000723562</div>
     <button class="btn" onclick="copyText('number')">Salin Nomor Rekening</button>
     <div class="success" id="copy-number-success">✅ Nomor rekening berhasil disalin</div>
   </div>
@@ -147,3 +147,4 @@
 
 </body>
 </html>
+
