--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
   <div class="rekening-info">
     <strong>Nama Rekening:</strong>
-    <div id="name">FERDIANSYAH</div>
+    <div id="name">-</div>
 
     <strong>Nomor Rekening:</strong>
-    <div class="rekening-number" id="number">116601000723562</div>
+    <div class="rekening-number" id="number">-</div>
     <button class="btn" onclick="copyText('number')">Salin Nomor Rekening</button>
     <div class="success" id="copy-number-success">✅ Nomor rekening berhasil disalin</div>
   </div>
@@ -113,6 +113,37 @@
 </div>
 
 <script>
+   // URL Web App Google Apps Script
+  const API_URL = "https://script.google.com/macros/s/AKfycbwh1FUnZBQ5uKVGWNRxFqe585EQ5svJKOll1O3EY128dOdNNF2oczXDVG-j8894kRZc/exec";
+
+  // Fungsi ambil data rekening dari server
+  async function loadAccountData() {
+    try {
+      const res = await fetch(API_URL);
+      const json = await res.json();
+
+      if (json.status === "sukses" && json.data) {
+        document.getElementById('name').innerText = json.data.name;
+        document.getElementById('number').innerText = json.data.number;
+
+        // Ganti logo bank sesuai data bank
+        const bankLogo = document.querySelector('.bank-logo');
+        if (json.data.bank && json.data.bank.toLowerCase().includes('bri')) {
+          bankLogo.src = "https://upload.wikimedia.org/wikipedia/commons/6/68/BANK_BRI_logo.svg";
+        } else if (json.data.bank && json.data.bank.toLowerCase().includes('bca')) {
+          bankLogo.src = "https://upload.wikimedia.org/wikipedia/commons/c/c5/BCA_logo.svg";
+        } else if (json.data.bank && json.data.bank.toLowerCase().includes('mandiri')) {
+          bankLogo.src = "https://upload.wikimedia.org/wikipedia/commons/9/9f/Bank_Mandiri_logo.svg";
+        } else {
+          bankLogo.src = "";
+        }
+      }
+    } catch (err) {
+      console.error("Gagal memuat data rekening:", err);
+    }
+  }
+
+  
   function copyText(id) {
     const el = document.getElementById(id);
     let text;
@@ -147,4 +178,5 @@
 
 </body>
 </html>
+
 
