--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
     <article class="card" id="card" role="region" aria-labelledby="title">
       <div class="section" style="margin-bottom:6px">
         <img class="bank-logo" id="bankLogo" src="" alt="Bank logo" onerror="this.src=defaultLogo">
-        <div class="label" id="labelBank">BANK</div>
         <div id="bankName" class="value">-</div>
       </div>
 
@@ -177,7 +176,8 @@
         </ol>
       </div>
 
-      <div class="footer-note" id="footerNote">© <span id="year"></span></div>
+      <div class="footer-note" id="footerNote">Copyright © 2023 Validus. All rights reserved.
+      </div>
     </article>
 
     <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
@@ -437,4 +437,5 @@ async function loadData(){
 </script>
 </body>
 </html>
+
 
