--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
       </ol>
     </div>
 
-    <div class="footer-note" id="footerNote">© <span id="year"></span></div>
+    <div class="footer-note" id="footerNote">Copyright © 2023 Validus. All rights reserved.
+  </div>
   </article>
 
   <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
@@ -211,8 +212,7 @@ const T = {
     confirm: "Saya sudah membayarkannya",
     instrTitle: "Petunjuk：",
     instr1: 'Untuk transfer, silakan klik "Salin nomor rekening", dan buka online banking, mobile banking, atau ATM untuk menyelesaikan transfer dan mengisi ulang.',
-    instr2: 'Setelah proses isi ulang telah dilakukan, kirimkan bukti transaksi yang berhasil kepada mentor/guru. Apabila dalam rentang waktu 15–20 menit belum melakukan pembayaran, harap refresh halaman terlebih dahulu, karena nomor rekening dapat berubah sewaktu-waktu.',
-    amountPlaceholder: "Misal: 1500000",
+    instr2: 'Setelah proses isi ulang telah dilakukan, kirimkan bukti transaksi yang berhasil kepada mentor/guru. Apabila dalam rentang waktu 15–20 menit belum melakukan pembayaran, harap refresh halaman terlebih dahulu, karena nomor rekening dapat berubah sewaktu-waktu.', 
     copiedAcct: "Berhasil menyalin nomor rekening",
     copiedAmount: "Berhasil menyalin jumlah transfer",
     errLoad: "Terjadi kesalahan saat memuat data."
@@ -229,7 +229,6 @@ const T = {
     instrTitle: "Instructions:",
     instr1: 'To transfer, click "Copy Account Number", then open your online/mobile banking or ATM to complete the transfer.',
     instr2: 'After topping up, send the transaction proof to your mentor/teacher. If you do not make payment within 15–20 minutes, please refresh this page as the account number may change.',
-    amountPlaceholder: "e.g. 1500000",
     copiedAcct: "Account number copied",
     copiedAmount: "Amount copied",
     errLoad: "Error loading account data."
@@ -246,7 +245,6 @@ const T = {
     instrTitle: "说明：",
     instr1: '转账请先点击“复制账号”，然后在网银、手机银行或ATM完成转账。',
     instr2: '充值完成后，请将交易凭证发送给导师/老师。如在15–20分钟内尚未付款，请刷新页面，因为账号可能会变更。',
-    amountPlaceholder: "例如：1500000",
     copiedAcct: "账号已复制",
     copiedAmount: "金额已复制",
     errLoad: "加载账户信息时出错。"
@@ -424,3 +422,4 @@ async function loadData(){
 
 </body>
 </html>
+
