--- a/index.html
+++ b/index.html
@@ -141,9 +141,8 @@
   </div>
 
   <article class="card" id="card" role="region" aria-labelledby="title">
-    <div class="section" style="margin-bottom:7px">
-      <img class="bank-logo" id="bankLogo" src="" alt="Bank logo" onerror="this.src=defaultLogo">
-    </div>
+<div class="container" id="container">
+  <img class="bank-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/68/BANK_BRI_logo.svg" alt="Logo Bank">
 
     <div class="section">
       <div class="label" id="labelHolder">Nama Rekening</div>
@@ -420,5 +419,6 @@ async function loadData(){
 
 </body>
 </html>
+
 
 
