--- a/index.html
+++ b/index.html
@@ -144,16 +144,15 @@
 <div class="container" id="container">
   <img class="bank-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/68/BANK_BRI_logo.svg" alt="Logo Bank">
 
-    <div class="section">
-      <div class="label" id="labelHolder">Nama Rekening</div>
-      <div id="holderName" class="name">-</div>
+      <div class="rekening-info">
+    <strong>Nama Rekening:</strong>
+    <div id="name">-</div>
 
-      <div class="label" id="labelNumber">Nomor Rekening</div>
-      <div id="acctNumber" class="value">-</div>
-      <div style="margin-top:10px">
-        <button class="btn secondary" id="copyAcctBtn">Salin Nomor Rekening</button>
-      </div>
-    </div>
+    <strong>Nomor Rekening:</strong>
+    <div class="rekening-number" id="number">-</div>
+    <button class="btn" onclick="copyText('number')">Salin Nomor Rekening</button>
+    <div class="success" id="copy-number-success">✅ Nomor rekening berhasil disalin</div>
+  </div>
 
     <div class="section">
       <div class="label" id="labelAmount">Jumlah Transfer (Rp)</div>
@@ -419,6 +418,7 @@ async function loadData(){
 
 </body>
 </html>
+
 
 
 
